@startuml ER-debtPosition
left to right direction

title Advanced Fees Management - Marketplace


entity bundles {
  * id <<generated by sequence>>
  --
  * idPsp (partitionKey)
  idChannel
  idBrokerPsp
  idCdi
  abi
  pspBusinessName
  urlPolicyPsp
  digitalStamp
  digitalStampRestriction
  * name
  description
  paymentAmount
  maxPaymentAmount
  minPaymentAmount
  paymentType
  touchpoint
  * type
  transferCategoryList
  validateDateFrom
  validateDateTo
  insertedDate
}

entity cibundles {
  * id <<generated by sequence>>
  --
  * idBundle
  * ciFiscalCode  (partitionKey)
  attributes
  type
  validityDateFrom
  validityDateTo
  insertedDate
}

entity cibundleattributes {
  * id <<generated by sequence>>
  --
  * maxPaymentAmount
  transferCategory
  * transferCategoryRelation
  insertedDate
}

entity bundlerequests {
  * id <<generated by sequence>>
  --
  * idPsp (partitionKey)
  * idBundle
  * ciFiscalCode
  attributes
  acceptedDate
  rejectionDate
  insertedDate
}

entity cibundlerequestattributes {
  * maxPaymentAmount
  transferCategory
  * transferCategoryRelation
}

entity bundleoffers {
  * id <<generated by sequence>>
  --
  * idPsp
  * idBundle
  * ciFiscalCode (partitionKey)
  acceptedDate
  rejectionDate
  insertedDate
}

entity archivedbundles {
  * id
  --
  * idPsp (partitionKey)
  * name
  description
  paymentAmount
  maxPaymentAmount
  minPaymentAmount
  touchpoint
  * type
  transferCategoryList
  validateDateFrom
  validateDateTo
}

entity archivedcibundles {
  * id
  --
  * idBundle
  * ciFiscalCode  (partitionKey)
  attributes
  validityDateFrom
  validityDateTo
}

entity cibundlerequestattributes {
  * maxPaymentAmount
  transferCategory
  * transferCategoryRelation
}

entity archivedbundleoffers {
  * id
  --
  * idPsp
  * idBundle
  * ciFiscalCode (partitionKey)
  acceptedDate
  rejectionDate
}

entity archivedbundlerequests {
  * id
  --
  * idPsp (partitionKey)
  * idBundle
  * ciFiscalCode
  attributes
  acceptedDate
  rejectionDate
}

bundles ||..|{ cibundles
cibundles ||..|{ cibundleattributes
bundles ||..|{ bundlerequests
bundlerequests ||..|{ cibundlerequestattributes
bundles ||..|{ bundleoffers

@enduml